--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,19 @@
-﻿- raw: 为何会这样问？
+﻿- raw: 冲灵所窍
+  result: Spirit Pathway
+  badtrans: true
+  direct: Chong Ling Suo Qiao
+  literal: Chong Ling Suo Qiao
+- raw: 领悟条件
+  result: Comprehension Condition
+  badtrans: true
+  direct: Understand Condition
+  literal: Ling Wu Tiao Jian
+- raw: 人傀
+  result: Human Puppet
+  badtrans: true
+  direct: Ren Kui
+  literal: Ren Kui
+- raw: 为何会这样问？
   result: Why would you ask this?
   badtrans: true
   direct: Wei he hui zhe yang wen
@@ -866,6 +881,336 @@
   literal: Yuan Yin
 
 # Names
+- raw: 远涉
+  result: Yuan She
+  badtrans: true
+  direct: Yuan She
+  literal: Yuan She
+- raw: 本初
+  result: Ben Chu
+  badtrans: true
+  direct: Ben Chu
+  literal: Ben Chu
+- raw: 了痕
+  result: Liao Hen
+  badtrans: true
+  direct: Liao Hen
+  literal: Liao Hen
+- raw: 陆老头
+  result: Lu Laotou
+  badtrans: true
+  direct: Lu Lao Tou
+  literal: Lu Lao Tou
+- raw: 古诉
+  result: Gu Su
+  badtrans: true
+  direct: Gu Su
+  literal: Gu Su
+- raw: 素怀
+  result: Su Huai
+  badtrans: true
+  direct: Su Huai
+  literal: Su Huai
+- raw: 高哥
+  result: Gao Ge
+  badtrans: true
+  direct: Gao Ge
+  literal: Gao Ge
+- raw: 宋三
+  result: Song San
+  badtrans: true
+  direct: Song San
+  literal: Song San
+- raw: 李老三
+  result: Li Laosan
+  badtrans: true
+  direct: Li Lao San
+  literal: Li Lao San
+- raw: 小玥
+  result: Xiao Yue
+  badtrans: true
+  direct: Xiao Yue
+  literal: Xiao Yue
+- raw: 永诚
+  result: Yong Cheng
+  badtrans: true
+  direct: Yong Cheng
+  literal: Yong Cheng
+- raw: 妙深
+  result: Miao Shen
+  badtrans: true
+  direct: Miao Shen
+  literal: Miao Shen
+- raw: 鲍赫
+  result: Bao He
+  badtrans: true
+  direct: Bao He
+  literal: Bao He
+- raw: 薄煜云
+  result: Bo Yunyun
+  badtrans: true
+  direct: Bo Yu Yun
+  literal: Bo Yu Yun
+- raw: 冠文斌
+  result: Guan Wenbin
+  badtrans: true
+  direct: Guan Wen Bin
+  literal: Guan Wen Bin
+- raw: 牧乃
+  result: Mu Nai
+  badtrans: true
+  direct: Mu Nai
+  literal: Mu Nai
+- raw: 年运华
+  result: Nian Yunhua
+  badtrans: true
+  direct: Nian Yun Hua
+  literal: Nian Yun Hua
+- raw: 孟辰
+  result: Meng Chen
+  badtrans: true
+  direct: Meng Chen
+  literal: Meng Chen
+- raw: 召毅
+  result: Zhao Yi
+  badtrans: true
+  direct: Zhao Yi
+  literal: Zhao Yi
+- raw: 粟博
+  result: Su Bo
+  badtrans: true
+  direct: Su Bo
+  literal: Su Bo
+- raw: 白瑾
+  result: Bai Jin
+  badtrans: true
+  direct: Bai Jin
+  literal: Bai Jin
+- raw: 年云天
+  result: Nian Yuntian
+  badtrans: true
+  direct: Nian Yun Tian
+  literal: Nian Yun Tian
+- raw: 跋辰
+  result: Ba Chen
+  badtrans: true
+  direct: Ba Chen
+  literal: Ba Chen
+- raw: 冷梅
+  result: Leng Mei
+  badtrans: true
+  direct: Leng Mei
+  literal: Leng Mei
+- raw: 伯瀚
+  result: Bo Han
+  badtrans: true
+  direct: Bo Han
+  literal: Bo Han
+- raw: 都夕彦
+  result: Du Xiyan
+  badtrans: true
+  direct: Du Xi Yan
+  literal: Du Xi Yan
+- raw: 段景天
+  result: Duan Jingtian
+  badtrans: true
+  direct: Duan Jing Tian
+  literal: Duan Jing Tian
+- raw: 寇崇卜
+  result: Kou Chongbu
+  badtrans: true
+  direct: Kou Chong Bu
+  literal: Kou Chong Bu
+- raw: 童杰
+  result: Tong Jie
+  badtrans: true
+  direct: Tong Jie
+  literal: Tong Jie
+- raw: 童宇
+  result: Tong Yu
+  badtrans: true
+  direct: Tong Yu
+  literal: Tong Yu
+- raw: 冉干
+  result: Ran Gan
+  badtrans: true
+  direct: Ran Gan
+  literal: Ran Gan
+- raw: 一经
+  result: Yi Jing
+  badtrans: true
+  direct: Yi Jing
+  literal: Yi Jing
+- raw: 姬恩
+  result: Ji En
+  badtrans: true
+  direct: Ji En
+  literal: Ji En
+- raw: 查新
+  result: Cha Xin
+  badtrans: true
+  direct: Cha Xin
+  literal: Cha Xin
+- raw: 朱天宇
+  result: Zhu Tianyu
+  badtrans: true
+  direct: Zhu Tian Yu
+  literal: Zhu Tian Yu
+- raw: 樊星
+  result: Fan Xing
+  badtrans: true
+  direct: Fan Xing
+  literal: Fan Xing
+- raw: 古空
+  result: Gu Kong
+  badtrans: true
+  direct: Gu Kong
+  literal: Gu Kong
+- raw: 侯逸
+  result: Hou Yi
+  badtrans: true
+  direct: Hou Yi
+  literal: Hou Yi
+- raw: 牧尘
+  result: Mu Chen
+  badtrans: true
+  direct: Mu Chen
+  literal: Mu Chen
+- raw: 公孙封
+  result: Gongsun Feng
+  badtrans: true
+  direct: Gongsun Feng
+  literal: Gongsun Feng
+- raw: 查帆
+  result: Cha Fan
+  badtrans: true
+  direct: Cha Fan
+  literal: Cha Fan
+- raw: 原修
+  result: Yuan Xiu
+  badtrans: true
+  direct: Yuan Xiu
+  literal: Yuan Xiu
+- raw: 云台
+  result: Yun Tai
+  badtrans: true
+  direct: Yun Tai
+  literal: Yun Tai
+- raw: 颛锡梅
+  result: Zhuang Ximei
+  badtrans: true
+  direct: Zhuang Xi Mei
+  literal: Zhuang Xi Mei
+- raw: 周楠和
+  result: Zhou Nianhe
+  badtrans: true
+  direct: Zhou Nan He
+  literal: Zhou Nan He
+- raw: 隋风
+  result: Sui Feng
+  badtrans: true
+  direct: Sui Feng
+  literal: Sui Feng
+- raw: 召润玉
+  result: Zhao Runyu
+  badtrans: true
+  direct: Zhao Run Yu
+  literal: Zhao Run Yu
+- raw: 丰言光
+  result: Feng Yangguang
+  badtrans: true
+  direct: Feng Yan Guang
+  literal: Feng Yan Guang
+- raw: 丰司深
+  result: Feng Sichen
+  badtrans: true
+  direct: Feng Si Shen
+  literal: Feng Si Shen
+- raw: 禾以宸
+  result: He Yichen
+  badtrans: true
+  direct: He Yi Chen
+  literal: He Yi Chen
+- raw: 势新荣
+  result: Shi Xinrong
+  badtrans: true
+  direct: Shi Xin Rong
+  literal: Shi Xin Rong
+- raw: 祝俊远
+  result: Zhu Junyuan
+  badtrans: true
+  direct: Zhu Jun Yuan
+  literal: Zhu Jun Yuan
+- raw: 郑乐生
+  result: Zheng Lesheng
+  badtrans: true
+  direct: Zheng Le Sheng
+  literal: Zheng Le Sheng
+- raw: 妙云
+  result: Miao Yun
+  badtrans: true
+  direct: Miao Yun
+  literal: Miao Yun
+- raw: 如涉
+  result: Ru She
+  badtrans: true
+  direct: Ru She
+  literal: Ru She
+- raw: 一义
+  result: Yi Yi
+  badtrans: true
+  direct: Yi Yi
+  literal: Yi Yi
+- raw: 妙越
+  result: Miao Yue
+  badtrans: true
+  direct: Miao Yue
+  literal: Miao Yue
+- raw: 全乾
+  result: Quan Qian
+  badtrans: true
+  direct: Quan Qian
+  literal: Quan Qian
+- raw: 间识
+  result: Jian Shi
+  badtrans: true
+  direct: Jian Shi
+  literal: Jian Shi
+- raw: 全展
+  result: Quan Zhan
+  badtrans: true
+  direct: Quan Zhan
+  literal: Quan Zhan
+- raw: 无剑
+  result: Wu Jian
+  badtrans: true
+  direct: Wu Jian
+  literal: Wu Jian
+- raw: 间默
+  result: Jian Mo
+  badtrans: true
+  direct: Jian Mo
+  literal: Jian Mo
+- raw: 如全
+  result: Ru Quan
+  badtrans: true
+  direct: Ru Quan
+  literal: Ru Quan
+- raw: 间云
+  result: Jian Yun
+  badtrans: true
+  direct: Jian Yun
+  literal: Jian Yun
+- raw: 一觉
+  result: Yi Jue
+  badtrans: true
+  direct: Yi Jue
+  literal: Yi Jue
+- raw: 无韦
+  result: Wu Wei
+  badtrans: true
+  direct: Wu Wei
+  literal: Wu Wei
 - raw: 许包
   result: Xu Bao
   badtrans: true
