--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,29 @@
 ﻿# Terms
+- raw: 三恶
+  result: Three Evils
+  badtrans: true
+  direct: Three Evil
+  literal: San E
+- raw: 三恶老大
+  result: Three Evils Old One
+  badtrans: true
+  direct: Three Evil Old One
+  literal: San E Lao Da
+- raw: 三恶老二
+  result: Three Evils Old Two
+  badtrans: true
+  direct: Three Evil Old Two
+  literal: San E Lao Er
+- raw: 三恶老三
+  result: Three Evils Old Three
+  badtrans: true
+  direct: Three Evil Old Three
+  literal: San E Lao San
+- raw: 小二
+  result: Waiter
+  badtrans: true
+  direct: Little Two
+  literal: Xiao Er
 - raw: 丹师
   result: Alchemist
   badtrans: true
