--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,6 @@
-﻿- raw: 冲灵所窍
+﻿- raw: 有关“大小二乘”，孰为正解？
+  result: "Regarding Great Waiter Cheng, which interpretation is correct?"
+- raw: 冲灵所窍
   result: Spirit Pathway
   badtrans: true
   direct: Chong Ling Suo Qiao
@@ -488,11 +490,6 @@
   badtrans: true  
   direct: The Entrustment of  
   literal: De Weituo  
-- raw: 冲灵所窍
-  result: Gateway to Spiritual Enlightenment
-  badtrans: true
-  direct: Chong Ling Suo Qiao
-  literal: Chong Ling Suo Qiao
 - raw: 领悟
   result: Comprehension
   badtrans: true
@@ -879,8 +876,449 @@
   badtrans: true  
   direct: Yuan Yin  
   literal: Yuan Yin
+- raw: 陈廉商人
+  result: Chen Honest Merchant
+  badtrans: true
+  direct: Chen Honest Merchant
+  literal: Chen Lian Shang Ren
+- raw: 墨家特技NPC
+  result: Mohist Special Techniques NPC
+  badtrans: true
+  direct: Ink Family Special Skills
+  literal: Mo Jia Te Ji
+- raw: 墨家交互
+  result: Mohist Interaction
+  badtrans: true
+  direct: Ink Family Interaction
+  literal: Mo Jia Jiao Hu
+- raw: 玄门像
+  result: Xuanmen Statue
+  badtrans: true
+  direct: Mysterious Gate Statue
+  literal: Xuan Men Xiang
+- raw: 黄老板
+  result: Huang Boss
+  badtrans: true
+  direct: Huang Boss
+  literal: Huang Lao Ban
+- raw: 府邸下人
+  result: Mansion Servant
+  badtrans: true
+  direct: Mansion Lower Person
+  literal: Fu Di Xia Ren
+- raw: 段恒工具人
+  result: Duan Heng Tool Person
+  badtrans: true
+  direct: Duan Heng Tool Person
+  literal: Duan Heng Gong Ju Ren
+- raw: 黑白居士
+  result: Black and White Hermit
+  badtrans: true
+  direct: Black White Recluse
+  literal: Hei Bai Ju Shi
+- raw: 何二哥
+  result: Second Brother He
+  badtrans: true
+  direct: He Second Brother
+  literal: He Er Ge
+- raw: 铁掌王五
+  result: Iron Palm Wang Wu
+  badtrans: true
+  direct: Iron Palm King Five
+  literal: Tie Zhang Wang Wu
 
 # Names
+- raw: 周炎
+  result: Zhou Yan
+  badtrans: true
+  direct: Zhou Flame
+  literal: Zhou Yan
+- raw: 段天恒
+  result: Duan Tianheng
+  badtrans: true
+  direct: Duan Sky Constant
+  literal: Duan Tian Heng
+- raw: 随秋白
+  result: Sui Qiubai
+  badtrans: true
+  direct: Sui Autumn White
+  literal: Sui Qiu Bai
+- raw: 于大海
+  result: Yu Dahai
+  badtrans: true
+  direct: Yu Great Sea
+  literal: Yu Da Hai
+- raw: 李虎
+  result: Li Hu
+  badtrans: true
+  direct: Li Tiger
+  literal: Li Hu
+- raw: 唐元庆
+  result: Tang Yuanqing
+  badtrans: true
+  direct: Tang Original Celebration
+  literal: Tang Yuan Qing
+- raw: 吴老
+  result: Wu Lao
+  badtrans: true
+  direct: Wu Old
+  literal: Wu Lao
+- raw: 刘伯
+  result: Liu Bo
+  badtrans: true
+  direct: Liu Elder
+  literal: Liu Bo
+- raw: 张伯
+  result: Zhang Bo
+  badtrans: true
+  direct: Zhang Elder
+  literal: Zhang Bo
+- raw: 刘知章
+  result: Liu Zhizhang
+  badtrans: true
+  direct: Liu Know Chapter
+  literal: Liu Zhi Zhang
+- raw: 包梓
+  result: Bao Zi
+  badtrans: true
+  direct: Bao Catalpa
+  literal: Bao Zi
+- raw: 张崇
+  result: Zhang Chong
+  badtrans: true
+  direct: Zhang 崇
+  literal: Zhang Chong
+- raw: 祝表西
+  result: Zhu Biaoxi
+  badtrans: true
+  direct: Zhu Watch West
+  literal: Zhu Biao Xi
+- raw: 扬剑鸣
+  result: Yang Jianming
+  badtrans: true
+  direct: Raise Sword Ring
+  literal: Yang Jian Ming
+- raw: 候青石
+  result: Hou Qingshi
+  badtrans: true
+  direct: Hou Green Stone
+  literal: Hou Qing Shi
+- raw: 黄川洛
+  result: Huang Chuanluo
+  badtrans: true
+  direct: Huang River Luo
+  literal: Huang Chuan Luo
+- raw: 韩春雷
+  result: Han Chunlei
+  badtrans: true
+  direct: Han Spring Thunder
+  literal: Han Chun Lei
+- raw: 曹武進
+  result: Cao Wujin
+  badtrans: true
+  direct: Cao Martial Advance
+  literal: Cao Wu Jin
+- raw: 韩清扬
+  result: Han Qingyang
+  badtrans: true
+  direct: Han Clear Rise
+  literal: Han Qing Yang
+- raw: 唐禹
+  result: Tang Yu
+  badtrans: true
+  direct: Tang Imperial
+  literal: Tang Yu
+- raw: 孙立
+  result: Sun Li
+  badtrans: true
+  direct: Sun Stand
+  literal: Sun Li
+- raw: 王布
+  result: Wang Bu
+  badtrans: true
+  direct: Wang Cloth
+  literal: Wang Bu
+- raw: 李当
+  result: Li Dang
+  badtrans: true
+  direct: Li When
+  literal: Li Dang
+- raw: 李绾人
+  result: Li Wanren
+  badtrans: true
+  direct: Li Tied Person
+  literal: Li Wan Ren
+- raw: 锐克
+  result: Rui Ke
+  badtrans: true
+  direct: Sharp Defeat
+  literal: Rui Ke
+- raw: 方世玉
+  result: Fang Shiyu
+  badtrans: true
+  direct: Fang World Jade
+  literal: Fang Shi Yu
+- raw: 安剑南
+  result: An Jiannan
+  badtrans: true
+  direct: An Sword South
+  literal: An Jian Nan
+- raw: 李长空
+  result: Li Changkong
+  badtrans: true
+  direct: Li Long Sky
+  literal: Li Chang Kong
+- raw: 啸犸
+  result: Xiao Ma
+  badtrans: true
+  direct: Howl Mammoth
+  literal: Xiao Ma
+- raw: 血暴
+  result: Xue Bao
+  badtrans: true
+  direct: Blood Violence
+  literal: Xue Bao
+
+- raw: 芙蓉王
+  result: Furong Wang
+  badtrans: true
+  direct: Lotus King
+  literal: Fu Rong Wang
+- raw: 熊二
+  result: Xiong Er
+  badtrans: true
+  direct: Bear Two
+  literal: Xiong Er
+- raw: 甄言飞
+  result: Zhen Yanfei
+  badtrans: true
+  direct: Zhen Words Fly
+  literal: Zhen Yan Fei
+- raw: 高宇恒
+  result: Gao Yuheng
+  badtrans: true
+  direct: Gao Universe Constant
+  literal: Gao Yu Heng
+- raw: 公明凡
+  result: Gong Mingfan
+  badtrans: true
+  direct: Public Bright Ordinary
+  literal: Gong Ming Fan
+- raw: 方元栀
+  result: Fang Yuanzhi
+  badtrans: true
+  direct: Fang Original Gardenia
+  literal: Fang Yuan Zhi
+- raw: 唐元侁
+  result: Tang Yuanqi
+  badtrans: true
+  direct: Tang Original Scholar
+  literal: Tang Yuan Qi
+- raw: 李大成
+  result: Li Dacheng
+  badtrans: true
+  direct: Li Great Achievement
+  literal: Li Da Cheng
+- raw: 熊江
+  result: Xiong Jiang
+  badtrans: true
+  direct: Bear River
+  literal: Xiong Jiang
+- raw: 杜田田
+  result: Du Tiantian
+  badtrans: true
+  direct: Du Field Field
+  literal: Du Tian Tian
+- raw: 鸿煊
+  result: Hong Xuan
+  badtrans: true
+  direct: Grand Prosperity
+  literal: Hong Xuan
+- raw: 步晨
+  result: Bu Chen
+  badtrans: true
+  direct: Step Morning
+  literal: Bu Chen
+- raw: 张二志
+  result: Zhang Erzhi
+  badtrans: true
+  direct: Zhang Second Will
+  literal: Zhang Er Zhi
+- raw: 严峻
+  result: Yan Jun
+  badtrans: true
+  direct: Severe Rugged
+  literal: Yan Jun
+- raw: 王妄
+  result: Wang Wang
+  badtrans: true
+  direct: King Delusion
+  literal: Wang Wang
+- raw: 姜朝
+  result: Jiang Chao
+  badtrans: true
+  direct: Jiang Dynasty
+  literal: Jiang Chao
+- raw: 黄吾
+  result: Huang Wu
+  badtrans: true
+  direct: Huang I
+  literal: Huang Wu
+- raw: 伯子明
+  result: Bo Ziming
+  badtrans: true
+  direct: Elder Son Bright
+  literal: Bo Zi Ming
+- raw: 伯子诚
+  result: Bo Zicheng
+  badtrans: true
+  direct: Elder Son Sincere
+  literal: Bo Zi Cheng
+- raw: 山太一
+  result: Shan Taiyi
+  badtrans: true
+  direct: Mountain Great One
+  literal: Shan Tai Yi
+- raw: 本冲田
+  result: Ben Chongtian
+  badtrans: true
+  direct: Ben冲田
+  literal: Ben Chong Tian
+- raw: 蒋思聪
+  result: Jiang Siong
+  badtrans: true
+  direct: Jiang Think Intelligent
+  literal: Jiang Si Cong
+- raw: 养平宁
+  result: Yang Pingning
+  badtrans: true
+  direct: Nurture Peaceful Tranquility
+  literal: Yang Ping Ning
+- raw: 马启
+  result: Ma Qi
+  badtrans: true
+  direct: Ma Start
+  literal: Ma Qi
+- raw: 李玉博
+  result: Li Yubo
+  badtrans: true
+  direct: Li Jade 博
+  literal: Li Yu Bo
+- raw: 张琛
+  result: Zhang Chen
+  badtrans: true
+  direct: Zhang Precious
+  literal: Zhang Chen
+- raw: 刘城
+  result: Liu Cheng
+  badtrans: true
+  direct: Liu City
+  literal: Liu Cheng
+- raw: 关长威
+  result: Guan Changwei
+  badtrans: true
+  direct: Guan Long威
+  literal: Guan Chang Wei
+- raw: 杨柳月
+  result: Yang Liuyue
+  badtrans: true
+  direct: Willow Moon
+  literal: Yang Liu Yue
+- raw: 江寻
+  result: Jiang Xun
+  badtrans: true
+  direct: River Search
+  literal: Jiang Xun
+- raw: 小木
+  result: Xiao Mu
+  badtrans: true
+  direct: Little Wood
+  literal: Xiao Mu
+- raw: 桃笛
+  result: Peach Flute
+  badtrans: true
+  direct: Peach Flute
+  literal: Tao Di
+- raw: 郭禹番
+  result: Guo Yufan
+  badtrans: true
+  direct: Guo Yü Foreign
+  literal: Guo Yu Fan
+- raw: 柳陈皮
+  result: Liu Chenpi
+  badtrans: true
+  direct: Willow Aged Peel
+  literal: Liu Chen Pi
+- raw: 萧康文
+  result: Xiao Kangwen
+  badtrans: true
+  direct: Xiao Peaceful Culture
+  literal: Xiao Kang Wen
+- raw: 萧庄衍
+  result: Xiao Zhuangyan
+  badtrans: true
+  direct: Xiao Manor Expansion
+  literal: Xiao Zhuang Yan
+- raw: 萧庄辞
+  result: Xiao Zhuangci
+  badtrans: true
+  direct: Xiao Manor Farewell
+  literal: Xiao Zhuang Ci
+- raw: 王生
+  result: Wang Sheng
+  badtrans: true
+  direct: Wang Life
+  literal: Wang Sheng
+- raw: 张山庆
+  result: Zhang Shanqing
+  badtrans: true
+  direct: Zhang Mountain Celebration
+  literal: Zhang Shan Qing
+- raw: 文扶风
+  result: Wen Fufeng
+  badtrans: true
+  direct: Wen Support Wind
+  literal: Wen Fu Feng
+- raw: 豆芃
+  result: Dou Peng
+  badtrans: true
+  direct: Bean Green
+  literal: Dou Peng
+- raw: 唐离穗
+  result: Tang Lisui
+  badtrans: true
+  direct: Tang Leave Tassel
+  literal: Tang Li Sui
+- raw: 姚红
+  result: Yao Hong
+  badtrans: true
+  direct: Yao Red
+  literal: Yao Hong
+- raw: 闻常礼
+  result: Wen Changli
+  badtrans: true
+  direct: Hear Constant Etiquette
+  literal: Wen Chang Li
+- raw: 闻常信
+  result: Wen Changxin
+  badtrans: true
+  direct: Hear Constant Belief
+  literal: Wen Chang Xin
+- raw: 张风生
+  result: Zhang Fengsheng
+  badtrans: true
+  direct: Zhang Wind Life
+  literal: Zhang Feng Sheng
+- raw: 黄世宗
+  result: Huang Shizong
+  badtrans: true
+  direct: Huang World Ancestor
+  literal: Huang Shi Zong
+- raw: 方珏
+  result: Fang Jue
+  badtrans: true
+  direct: Fang Jade
+  literal: Fang Jue
 - raw: 远涉
   result: Yuan She
   badtrans: true
