--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,5 +1,18 @@
-﻿- raw: 有关“大小二乘”，孰为正解？
-  result: "Regarding Great Waiter Cheng, which interpretation is correct?"
+﻿- raw: "庄子如何解释“真人之息以踵”？"
+  result: How does Zhuangzi explain 'The breath of the Immortal follows the heel'?
+  badtrans: true
+- raw: 刑泰一把从你手中夺过手镯，只一到手便喜形于色，哈哈大笑起来。
+  result: Xing Tai snatched the bracelet from your hand, and as soon as he held it, his face lit up with joy, bursting into laughter.
+  badtrans: true
+  direct: Xing Tai one grab from your hand snatched bracelet, just once in hand immediately joy shown on face, ha ha big laugh.
+  literal: Xing Tai Yi Ba Cong Ni Shou Zhong Duo Guo Shou Zhuo, Zhi Yi Dao Shou Bian Xi Xing Yu Se, Ha Ha Da Xiao Qi Lai.
+- raw: 说起来……我今早在路过万事通附近的时候有个人险些将我撞到，不知道这其中是否有什么关系！待会我可得去问问万事通才是！
+  result: "Speaking of which... I almost got bumped into by someone this morning when I passed by the area near Wan Shi Tong. I wonder if there's any connection! I should go ask Wan Shi Tong later!"
+  badtrans: true
+  direct: Speaking up... I this morning when passing by Wan Shi Tong vicinity someone almost bumped into me, don't know if there's any relation! Later I must go ask Wan Shi Tong!
+  literal: Shuo Qi Lai... Wo Jin Zao Zai Lu Guo Wan Shi Tong Fu Jin De Shi Hou You Ge Ren Xian Xie Jiang Wo Zhuang Dao, Bu Zhi Dao Zhe Qi Zhong Shi Fou You Shen Me Guan Xi! Dai Hui Wo Ke De Qu Wen Wen Wan Shi Tong Cai Shi!
+- raw: 有关“大小二乘”，孰为正解？
+  result: "Regarding 'Great Waiter Cheng', which interpretation is correct?"
 - raw: 冲灵所窍
   result: Spirit Pathway
   badtrans: true
@@ -928,6 +941,11 @@
   literal: Tie Zhang Wang Wu
 
 # Names
+- raw: 步府侍卫长
+  result: Chief of the Foot Mansion Guards
+  badtrans: true
+  direct: Foot Mansion Guard Chief
+  literal: Bu Fu Shi Wei Chang
 - raw: 周炎
   result: Zhou Yan
   badtrans: true
