--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2607,6 +2607,16 @@
   badtrans: true
 
 # Names
+- raw: 百槐涯
+  result: Bai Huaiya
+  badtrans: true
+  direct: Hundred Huai Cliff
+  literal: Bai Huai Ya
+# - raw: 宁羽士
+#   result: Taoist Ning
+#   badtrans: true
+#   direct: Ning Feather Scholar
+#   literal: Ning Yu Shi
 - raw: 玉阳子
   result: Master Yu Yang
   badtrans: true
