--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,9 @@
-﻿- raw: "庄子如何解释“真人之息以踵”？"
+﻿- raw: 一旁围在村民旁的黑衣人拖住一位村民挥刀斩去！
+  result: A man in black, standing beside the villagers, grabbed one of them and swung his blade to strike!
+  badtrans: true
+  direct: One side surrounding by villagers, black-clad person dragged a villager and swung knife to chop away!
+  literal: Yi Pang Wei Zai Cun Min Pang De Hei Yi Ren Tuo Zhu Yi Wei Cun Min Hui Dao Zhan Qu!
+- raw: "庄子如何解释“真人之息以踵”？"
   result: How does Zhuangzi explain 'The breath of the Immortal follows the heel'?
   badtrans: true
 - raw: 刑泰一把从你手中夺过手镯，只一到手便喜形于色，哈哈大笑起来。
@@ -941,8 +946,13 @@
   literal: Tie Zhang Wang Wu
 
 # Names
+- raw: 白儒水
+  result: Bai Ru Shui
+  badtrans: true
+  direct: White Scholar Water
+  literal: Bai Ru Shui
 - raw: 步府侍卫长
-  result: Chief of the Foot Mansion Guards
+  result: Bu Mansion Guards Chief
   badtrans: true
   direct: Foot Mansion Guard Chief
   literal: Bu Fu Shi Wei Chang
