--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2607,16 +2607,71 @@
   badtrans: true
 
 # Names
+- raw: 飞白墨客
+  result: Feibai Calligrapher
+  badtrans: true
+  direct: Flying white ink guest
+  literal: Fei Bai Mo Ke
+- raw: 黑白居士
+  result: Heibai Hermit
+  badtrans: true
+  direct: Black white recluse
+  literal: Hei Bai Ju Shi
+- raw: 丹青妙笔
+  result: Master Painter
+  badtrans: true
+  direct: Red blue wonderful brush
+  literal: Dan Qing Miao Bi
+- raw: 玉弦道人
+  result: Jade String Taoist
+  badtrans: true
+  direct: Jade string Taoist
+  literal: Yu Xian Dao Ren
+- raw: 赵羽士
+  result: Taoist Zhao
+  badtrans: true
+  direct: Zhao Feather Scholar
+  literal: Zhao Yu Shi
+- raw: 钟羽士
+  result: Taoist Zhong
+  badtrans: true
+  direct: Zhong Feather Scholar
+  literal: Zhong Yu Shi
+- raw: 程羽士
+  result: Taoist Cheng
+  badtrans: true
+  direct: Cheng Feather Scholar
+  literal: Cheng Yu Shi
+- raw: 左羽士
+  result: Taoist Zuo
+  badtrans: true
+  direct: Left Feather Scholar
+  literal: Zuo Yu Shi
+- raw: 江羽士
+  result: Taoist Jiang
+  badtrans: true
+  direct: Jiang Feather Scholar
+  literal: Jiang Yu Shi
+- raw: 宁羽士
+  result: Taoist Ning
+  badtrans: true
+  direct: Ning Feather Scholar
+  literal: Ning Yu Shi
+- raw: 蔺羽士
+  result: Taoist Lin
+  badtrans: true
+  direct: Lin Feather Scholar
+  literal: Lin Yu Shi
+- raw: 温羽士
+  result: Taoist Wen
+  badtrans: true
+  direct: Wen Feather Scholar
+  literal: Wen Yu Shi
 - raw: 百槐涯
   result: Bai Huaiya
   badtrans: true
   direct: Hundred Huai Cliff
   literal: Bai Huai Ya
-# - raw: 宁羽士
-#   result: Taoist Ning
-#   badtrans: true
-#   direct: Ning Feather Scholar
-#   literal: Ning Yu Shi
 - raw: 玉阳子
   result: Master Yu Yang
   badtrans: true
