--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,30 @@
-﻿- raw: 一旁围在村民旁的黑衣人拖住一位村民挥刀斩去！
+﻿- raw: 说说吧，怎么回事。
+  result: Tell me, what's going on?
+  badtrans: true
+  direct: Speak speak, what happened?
+  literal: Shuo shuo ba, zen me hui shi.
+- raw: 帮厨
+  result: Assistant cook
+  badtrans: true
+  direct: Help kitchen
+  literal: Bang Chu
+- raw: 大厨
+  result: Head chef
+  badtrans: true
+  direct: Big chef
+  literal: Da Chu
+- raw: 名厨
+  result: Famous chef
+  badtrans: true
+  direct: Famous kitchen
+  literal: Ming Chu
+- raw: 相交意气
+  result: Bond of friendship
+  badtrans: true
+  direct: Mutual connection of spirit
+  literal: Xiang Jiao Yi Qi
+
+- raw: 一旁围在村民旁的黑衣人拖住一位村民挥刀斩去！
   result: A man in black, standing beside the villagers, grabbed one of them and swung his blade to strike!
   badtrans: true
   direct: One side surrounding by villagers, black-clad person dragged a villager and swung knife to chop away!
@@ -929,11 +955,6 @@
   badtrans: true
   direct: Duan Heng Tool Person
   literal: Duan Heng Gong Ju Ren
-- raw: 黑白居士
-  result: Black and White Hermit
-  badtrans: true
-  direct: Black White Recluse
-  literal: Hei Bai Ju Shi
 - raw: 何二哥
   result: Second Brother He
   badtrans: true
@@ -946,6 +967,46 @@
   literal: Tie Zhang Wang Wu
 
 # Names
+- raw: 花不迟
+  result: Hua Buchi
+  badtrans: true
+  direct: Flowers not late
+  literal: Hua Bu Chi
+- raw: 邋遢男子
+  result: Untidy man
+  badtrans: true
+  direct: Untidy man
+  literal: La Ta Nan Zi
+- raw: 乌雅宣朗
+  result: Wuya Xuanlang
+  badtrans: true
+  direct: Wuya Declare Bright
+  literal: Wuya Xuan Lang
+- raw: 安海宁
+  result: An Haining
+  badtrans: true
+  direct: Peaceful sea tranquility
+  literal: An Hai Ning
+- raw: 谢访
+  result: Xie Fang
+  badtrans: true
+  direct: Thank visit
+  literal: Xie Fang
+- raw: 澄清
+  result: Cheng Qing
+  badtrans: true
+  direct: Clear up
+  literal: Cheng Qing
+- raw: 澄心
+  result: Cheng Xin
+  badtrans: true
+  direct: Clear heart
+  literal: Cheng Xin
+- raw: 澄静
+  result: Cheng Jing
+  badtrans: true
+  direct: Clear and quiet
+  literal: Cheng Jing
 - raw: 白儒水
   result: Bai Ru Shui
   badtrans: true
