--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,14 @@
-﻿- raw: 说说吧，怎么回事。
+﻿- raw: 鸡
+  result: Chicken
+  badtrans: true
+  direct: Chicken
+  literal: Ji
+- raw: 牛
+  result: Cow
+  badtrans: true
+  direct: Cow
+  literal: Niu
+- raw: 说说吧，怎么回事。
   result: Tell me, what's going on?
   badtrans: true
   direct: Speak speak, what happened?
