--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1945,6 +1945,11 @@
 
 
 # Items and Minerals
+# - raw: 包子
+#   result: Steamed Bun
+#   badtrans: true
+#   direct: Bun
+#   literal: Bao Zi
 - raw: 明心见性丹
   result: Mind-clearing and nature-revealing pill
   badtrans: true
