--- a/Files/Resizers/MainView.yaml
+++ b/Files/Resizers/MainView.yaml
@@ -105,3 +105,4 @@
   sampleText: "In the Wulin, it is renowned as one of the most terrifying prisons. It is said to be the final place where the Primordial Origin Sword Sect confines evil masters. Many malevolent figures who have caused chaos across the land have spent their remaining days here, and now it holds a master known as Ku Bu Bu, whose power is unfathomable and whose language overflows with absurdity, instilling fear in those who hear of him."
   idealFontSize: 16
   allowWordWrap: true
+  overflowMode: Overflow
