--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2614,6 +2614,25 @@
   result: Gao Family
   badtrans: true
 
+# Character names with non breaking spaces
+- raw: 沈雁弓
+  result: "Shen\u00A0Yangong"
+  allowalt:
+    - Shen Yangong
+- raw: 梁潇
+  result: "Liang\u00A0Xiao"
+  allowalt:
+    - Liang Xiao
+- raw: 玉玲珑
+  result: "Yu\u00A0Linglong"
+  allowalt: 
+    - White Jade
+    - Yu Linglong
+- raw: 杨若水
+  result: "Yang\u00A0Ruoshui"
+  allowalt: 
+    - Yang Ruoshui
+
 # Names
 - raw: 飞白墨客
   result: Feibai Calligrapher
