--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -983,6 +983,8 @@
   result: "Liang\u00A0Xiao"
 - raw: 玉玲珑
   result: "Yu\u00A0Linglong"
+  allowalt: 
+    - White Jade
 - raw: 杨若水
   result: "Yang\u00A0Ruoshui"
 
