Massive name cleanse

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,12 @@
 ﻿# Terms
+# - raw: 黑衣人  
+#   result: Black clothed person  
+#   allowalt: 
+#     - Black clothed people
+#     - people dressed in black
+#   badtrans: true  
+#   direct: Black-Clothed Person  
+#   literal: Heiyiren  
 - raw: 真人
   result: Immortal
   badtrans: true
@@ -2634,6 +2642,105 @@
     - Yang Ruoshui
 
 # Names
+- raw: 何老汉  
+  result: Old Man He
+  badtrans: true  
+  direct: He Old Man  
+  literal: He Lao Han  
+- raw: 小虹  
+  result: Xiao Hong  
+  badtrans: true  
+  direct: Little Rainbow  
+  literal: Xiao Hong  
+- raw: 诡手  
+  result: Gui Shou  
+  allowalt: 
+    - Cunning hands
+  badtrans: true  
+  direct: Devious Hand  
+  literal: Guishou  
+- raw: 刘福  
+  result: Liu Fu  
+  badtrans: true  
+  direct: Liu Fortune  
+  literal: Liu Fu  
+- raw: 赵年  
+  result: Zhao Nian  
+  badtrans: true  
+  direct: Zhao Year  
+  literal: Zhao Nian   
+- raw: 丁已  
+  result: Ding Yi  
+  badtrans: true  
+  direct: Ding Already  
+  literal: Ding Yi  
+- raw: 万步狼  
+  result: Wanbu Lang  
+  badtrans: true  
+  direct: Ten Thousand Step Wolf  
+  literal: Wanbu Lang  
+- raw: 幽影  
+  result: You Ying  
+  allowalt: 
+    - Shadow
+  badtrans: true  
+  direct: Mysterious Shadow  
+  literal: You Ying  
+- raw: 白霜茗  
+  result: Bai Shuangming  
+  badtrans: true  
+  direct: White Frost Tea  
+  literal: Bai Shuangming  
+- raw: 秦月岚  
+  result: Qin Yuelan  
+  badtrans: true  
+  direct: Qin Moon Mist  
+  literal: Qin Yuelan  
+- raw: 陆峥  
+  result: Lu Zheng  
+  badtrans: true  
+  direct: Lu Peak  
+  literal: Lu Zheng  
+- raw: 岳靖山  
+  result: Yue Jingshan  
+  badtrans: true  
+  direct: Yue Tranquil Mountain  
+  literal: Yue Jingshan  
+- raw: 徐善忠  
+  result: Xu Shanzhong  
+  badtrans: true  
+  direct: Xu Good Loyalty  
+  literal: Xu Shanzhong  
+- raw: 云重烨  
+  result: Yun Chongye  
+  badtrans: true  
+  direct: Yun Heavy Blaze  
+  literal: Yun Chongye  
+- raw: 闻易  
+  result: Wen Yi  
+  badtrans: true  
+  direct: Wen Easy  
+  literal: Wen Yi  
+- raw: 洛柔  
+  result: Luo Rou  
+  badtrans: true  
+  direct: Luo Soft  
+  literal: Luo Rou  
+- raw: 雪河夫人  
+  result: Lady Xuehe  
+  badtrans: true  
+  direct: Snow River Madam  
+  literal: Xuehe Furen  
+- raw: 姚秉  
+  result: Yao Bing  
+  badtrans: true  
+  direct: Yao Uphold  
+  literal: Yao Bing  
+- raw: 王虎嘉  
+  result: Wang Hujia  
+  badtrans: true  
+  direct: King Tiger Excellent  
+  literal: Wang Hujia  
 - raw: 飞白墨客
   result: Feibai Calligrapher
   badtrans: true
